--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Urbania Climbing Festival",
-  "short_name": "UFC",
+  "short_name": "UCF",
   "icons": [
     {
       "src": "favicon.ico",
