--- a/manifest.json
+++ b/manifest.json
@@ -10,12 +10,17 @@
       "src": "/logo512.png",
       "sizes": "512x512",
       "type": "image/png"
+    },
+    {
+      "src": "/logowide.png",
+      "sizes": "792x767",
+      "type": "image/png"
     }
   ],
   "screenshots": [
     {
-      "src": "/logo512.png",
-      "sizes": "512x512",
+      "src": "/logowide.png",
+      "sizes": "792x767",
       "type": "image/png",
       "form_factor": "wide"
     }
