--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "icons": [
     {
       "src": "/logo512.png",
-      "sizes": "512x512",
+      "sizes": "256x256",
       "type": "image/png"
     },
     {
@@ -18,6 +18,11 @@
     }
   ],
   "screenshots": [
+    {
+      "src": "/logowide.png",
+      "sizes": "792x767",
+      "type": "image/png"
+    },
     {
       "src": "/logowide.png",
       "sizes": "792x767",
