--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,22 @@
 {
+  "id": "/",
   "name": "Urbania Climbing Festival",
   "short_name": "UCF",
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "display": "standalone",
-  "start_url": ".",
+  "start_url": "/?source=pwa",
+  "scope": "/",
+  "orientation": "portrait",
   "icons": [
     {
+      "src": "/logo192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
       "src": "/logo512.png",
-      "sizes": "256x256",
+      "sizes": "512x512",
       "type": "image/png"
     },
     {
